--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,38 @@
 Console/.vs
-Console/FolderViewWeb/bin/
-Console/FolderViewWeb/obj/
+Console/FolderViewWeb/bin/*
+Console/FolderViewWeb/obj/*
+Console/FolderViewWeb/wwwroot/adminLTE/
+**/package-lock.json
+*.suo
+*.backup
+*.user
+*.dbmdl
+*.pptx
+*.psess
+*.orig
+*.xml
+*.~vsd
+*.zip
+*.sublime-project
+*.sublime-workspace
+*.exe
+*.avi
+*.mp4
+*.mov
+*.rar
+*.mdf
+*.ldf
+**/nuspec.list
+**/packages/
+**/.sass-cache/
+**/node_modules/
+**/bower_components/
+*/Performance/*TestResults.txt
+**/bin
+**/obj
+**/*.log.1
+**/*.log.*
+*.log
+*.db
+.vs/
+Publish/
