Se agrega la variable DbName en el archivo appsettings.json y se hace uso de su valor en todos los repositorios

--- a/Console/FolderViewWeb/appsettings.json
+++ b/Console/FolderViewWeb/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SqlConnection": "server=(localdb)\\mssqllocaldb; database=IA_GEN; Integrated Security=true;encrypt=false"
-  }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "SqlConnection": "server=(localdb)\\mssqllocaldb; database=IA_GEN; Integrated Security=true;encrypt=false"
+    },
+    "DbName": "ConsolaMonitoreo"
 }
