Se agrego codigo para mostrar los archivo en el visor de codigo

--- a/Console/FolderViewWeb/appsettings.json
+++ b/Console/FolderViewWeb/appsettings.json
@@ -9,5 +9,5 @@
     "ConnectionStrings": {
         "SqlConnection": "server=(localdb)\\mssqllocaldb; database=IA_GEN; Integrated Security=true;encrypt=false"
     },
-    "DbName": "ConsolaMonitoreo"
+    "DbName": "IA_GEN"
 }
